# nonebot-plugin-namelist

./: README.md  pyproject.toml
nonebot_plugin_namelist/: __init__.py
